fix: solve padding issue of navbar on ios safari (#587)
Closes dailydotdev/daily#285

--- a/packages/webapp/components/FooterNavBar.module.css
+++ b/packages/webapp/components/FooterNavBar.module.css
@@ -1,4 +1,5 @@
 .footerNavBar {
-  height: $navBarHeight;
+  min-height: $navBarHeight;
   grid-column-gap: 0.5rem;
+  padding-bottom: env(safe-area-inset-bottom, 0);
 }
